@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-22T01:17:43Z",
+  "timestamp" : "2025-06-22T12:25:59Z",
   "count_outdated" : 5012,
   "uniques_outdated" : 2676,
-  "count" : 5068,
-  "uniques" : 2722,
+  "count" : 5072,
+  "uniques" : 2725,
   "clones" : [
     {
       "timestamp": "2025-06-09T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 9,
       "uniques_minmax": [ 5, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2025-06-22T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
