@@ -1,6 +1,6 @@
 {
-  "count": 56,
-  "uniques": 37,
+  "count": 60,
+  "uniques": 38,
   "clones": [
     {
       "timestamp": "2025-06-09T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2025-06-21T00:00:00Z",
       "count": 12,
       "uniques": 9
+    },
+    {
+      "timestamp": "2025-06-22T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
