@@ -1,3 +1,12 @@
+2025-06-22T12:25:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15806558246 # 1054
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
+* notice: last 14d: unq all: 38 60
+* notice: prev accum: outdated-unq outdated-all / unq all: 2676 5012 / 2722 5068
+* notice: next accum: outdated-unq outdated-all / unq all: 2676 5012 / 2725 5072
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2025-06-22]
+
 2025-06-22T01:17:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15801484841 # 1053
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
